--- a/src/classes/AccountController.cls
+++ b/src/classes/AccountController.cls
@@ -2,6 +2,7 @@ public with sharing class AccountController
 {
     
     public list<account> acclist{get;set;}
+	public boolean isValid ;
 
     public AccountController()
     {
