m1 commit form dev 1

--- a/src/classes/AccountController.cls
+++ b/src/classes/AccountController.cls
@@ -10,6 +10,10 @@ public with sharing class AccountController
         acclist =  [select Name, BillingCity, BillingAddress, BillingState, ownerID,phone,private__C from Account];   
         
     }
+	
+	public void m1(){
+	
+	}
 
    
 }
