--- a/src/classes/AccountController.cls
+++ b/src/classes/AccountController.cls
@@ -2,18 +2,10 @@ public with sharing class AccountController
 {
     
     public list<account> acclist{get;set;}
-	public boolean isValid ;
 
-
-    public AccountController()
-    {
-        acclist = new list<Account>();
-        acclist =  [select Name, BillingCity, BillingAddress, BillingState, ownerID,phone,private__C from Account];   
-        
-    }
+    public m2(){
 	
-	public void m1(){
-
+	}
 
    
 }
