--- a/src/classes/AccountController.cls
+++ b/src/classes/AccountController.cls
@@ -8,7 +8,9 @@ public with sharing class AccountController
     public AccountController()
     {
         acclist = new list<Account>();
-        acclist =  [select Name, BillingCity, BillingAddress, BillingState, ownerID,phone,private__C from Account];   
+        acclist =  [select Name, BillingCity, BillingAddress, BillingState, ownerID,phone,private__C from Account];
+	//This is just a modification.
+	integer x = 10;
         
     }
 	
