--- a/src/classes/AccountController.cls
+++ b/src/classes/AccountController.cls
@@ -7,6 +7,8 @@ public with sharing class AccountController
 
 	public void m2(){
 		system.debug('Hello! This is M2');
+system.debug('Modifed with Dev1');
+		
 	}
 
    
